--- a/Phase 2: Imbolc Tasks/2.Provide snapshots.md
+++ b/Phase 2: Imbolc Tasks/2.Provide snapshots.md
@@ -1,4 +1,4 @@
-# Provide dashboard for the OKP4 network
+# Provide snapshots
 <img src="/images/OKP4-GitHub-Phase2.jpg" width="auto" height="auto">
 
 ## Sistemi Güncelleme ve Docker Kurulumu
