--- a/Phase 2: Imbolc Tasks/2.Provide snapshots.md
+++ b/Phase 2: Imbolc Tasks/2.Provide snapshots.md
@@ -58,7 +58,7 @@ SERVICE_NAME="okp4d.service"
 
 ## Running Script to Take New Snapshot
 First, we give the file run permission.
-```
+```bash
 chmod +x ./Cosmos-Snapshots/scripts/okp4_snapshot.sh
 ```
 
@@ -68,16 +68,19 @@ Finally, we run the script.
 ## Checking Snapshot
 When the snapshot process is completed, file the relevant file.
 You can see it in the `/snapshots/okp4/` file.
+```bash
+echo http://$(curl -s -4 ifconfig.me)/snapshots/okp4/
+```
 
 ## Automating Snapshot Capture
 First of all, we install cron and activate it.
-```
+```bash
 sudo apt install cron
 sudo systemctl enable cron
 ```
 
 With the code below, we open the crontab file for editing.
-```
+```bash
 crontab -e
 ```
 
