Update 1.Expose RPC node.md

--- a/Phase 2: Imbolc Tasks/1.Expose RPC node.md
+++ b/Phase 2: Imbolc Tasks/1.Expose RPC node.md
@@ -16,5 +16,5 @@ systemctl restart okp4d
 
 ## Step 3: Getting your RPC Endpoint address
 ```bash
-echo $(curl -s -4 ifconfig.me)$PORTR
+echo http://$(curl -s -4 ifconfig.me)$PORTR
 ```
