--- a/Phase 2: Imbolc Tasks/2.Provide snapshots.md
+++ b/Phase 2: Imbolc Tasks/2.Provide snapshots.md
@@ -12,15 +12,11 @@ sudo apt install curl git docker.io -y
 git clone https://github.com/koltigin/Cosmos-Snapshots.git && cd Cosmos-Snapshots
 ```
 
-## Creating Snapshots Folder
+## Creating Snapshots and OKP4 Folder
 ```
-mkdir $HOME/snapshots/
+mkdir -p $HOME/snapshots/okp4
 ```
 
-## Creating Folder for OKP4
-```
-mkdir $HOME/snapshots/okp4
-```
 ## Creating the Log File
 OKP4 file is created here.
 ```
