--- a/Phase 2: Imbolc Tasks/2.Provide snapshots.md
+++ b/Phase 2: Imbolc Tasks/2.Provide snapshots.md
@@ -14,13 +14,13 @@ git clone https://github.com/koltigin/Cosmos-Snapshots.git && cd Cosmos-Snapshot
 
 ## Creating Snapshots and OKP4 Folder
 ```
-mkdir -p $HOME/snapshots/okp4
+mkdir -p $HOME/snapshots/testnet/okp4
 ```
 
 ## Creating the Log File
 OKP4 file is created here.
 ```
-touch $HOME/snapshots/okp4/okp4_log.txt
+touch $HOME/snapshots/testnet/okp4/okp4_log.txt
 ```
 ## Starting Nginx with Docker
 ```bash
@@ -46,8 +46,8 @@ nano $HOME/Cosmos-Snapshots/scripts/okp4_snapshot.sh
 We arrange it as seen in the code below.
 ```bash
 CHAIN_ID="okp4-nemeton-1"
-SNAP_PATH="$HOME/snapshots/okp4"
-LOG_PATH="$HOME/snapshots/okp4/okp4_log.txt"
+SNAP_PATH="$HOME/snapshots/testnet/okp4"
+LOG_PATH="$HOME/snapshots/testnet/okp4/okp4_log.txt"
 DATA_PATH="$HOME/.okp4d/data/"
 SERVICE_NAME="okp4d.service"
 ```
@@ -65,7 +65,7 @@ Finally, we run the script.
 When the snapshot process is completed, file the relevant file.
 You can see it in the `/snapshots/okp4/` file.
 ```bash
-echo http://$(curl -s -4 ifconfig.me)/snapshots/okp4/
+echo http://$(curl -s -4 ifconfig.me)/snapshots/testnet/okp4/
 ```
 
 ## Automating Snapshot Capture
