--- a/Phase 2: Imbolc Tasks/2.Provide snapshots.md
+++ b/Phase 2: Imbolc Tasks/2.Provide snapshots.md
@@ -14,23 +14,36 @@ git clone https://github.com/koltigin/Cosmos-Snapshots.git && cd Cosmos-Snapshot
 
 ## Creating Snapshots and OKP4 Folder
 ```
-mkdir -p $HOME/snapshots/testnet/okp4
+mkdir -p $HOME/snapshots/snapshots/testnet/okp4
 ```
 
 ## Creating the Log File
 OKP4 file is created here.
 ```
-touch $HOME/snapshots/testnet/okp4/okp4_log.txt
+touch $HOME/snapshots/snapshots/testnet/okp4/okp4_log.txt
 ```
-## Starting Nginx with Docker
+## Setup Nginx
 ```bash
-cd $HOME; \
-docker run --name snapshots \
---restart always \
--v $(pwd)/default.conf:/etc/nginx/conf.d/default.conf \
--v $(pwd)/snapshots/:/root/ \
--p 80:80 \
--d nginx
+sudo apt-get install nginx -y
+sudo unlink /etc/nginx/sites-enabled/default
+```
+
+## Creating the file-server.conf
+Here we determine the directory of the site where we will publish the snapshot.
+```bash
+sudo tee <<EOF >/dev/null /etc/nginx/sites-available/file-server.conf
+server {
+    listen       80;
+    client_max_body_size 5G;
+    proxy_max_temp_file_size 0;
+    root /root/snapshot/;
+    autoindex on;
+}
+EOF
+sudo ln -s /etc/nginx/sites-available/file-server.conf /etc/nginx/sites-enabled/file-server.conf
+chmod o+x /root/snapshot
+chmod o+x /root/
+service nginx restart
 ```
 
 ## Setting Variables
@@ -46,8 +59,8 @@ nano $HOME/Cosmos-Snapshots/scripts/okp4_snapshot.sh
 We arrange it as seen in the code below.
 ```bash
 CHAIN_ID="okp4-nemeton-1"
-SNAP_PATH="$HOME/snapshots/testnet/okp4"
-LOG_PATH="$HOME/snapshots/testnet/okp4/okp4_log.txt"
+SNAP_PATH="$HOME/snapshots/snapshots/testnet/okp4"
+LOG_PATH="$HOME/snapshots/snapshots/testnet/okp4/okp4_log.txt"
 DATA_PATH="$HOME/.okp4d/data/"
 SERVICE_NAME="okp4d.service"
 ```
@@ -63,7 +76,8 @@ Finally, we run the script.
 
 ## Checking Snapshot
 When the snapshot process is completed, file the relevant file.
-You can see it in the `/snapshots/okp4/` file.
+You can see it in the `/snapshots/snapshots/testnet/okp4/` file.
+And check link below.
 ```bash
 echo http://$(curl -s -4 ifconfig.me)/snapshots/testnet/okp4/
 ```
