--- a/Phase 2: Imbolc Tasks/2.Provide snapshots.md
+++ b/Phase 2: Imbolc Tasks/2.Provide snapshots.md
@@ -72,7 +72,9 @@ chmod +x ./Cosmos-Snapshots/scripts/okp4_snapshot.sh
 ```
 
 Finally, we run the script.
-`./Cosmos-Snapshots/scripts/okp4_snapshot.sh`
+```bash
+./Cosmos-Snapshots/scripts/okp4_snapshot.sh
+```
 
 ## Checking Snapshot
 When the snapshot process is completed, file the relevant file.
