Update 1.Expose RPC node.md

--- a/Phase 2: Imbolc Tasks/1.Expose RPC node.md
+++ b/Phase 2: Imbolc Tasks/1.Expose RPC node.md
@@ -18,3 +18,6 @@ systemctl restart okp4d
 ```bash
 echo http://$(curl -s -4 ifconfig.me)$PORTR
 ```
+
+## Step 3: Submit your RPC link
+https://okp4.typeform.com/Nemeton-RPC
