--- a/Phase 2: Imbolc Tasks/2.Provide snapshots.md
+++ b/Phase 2: Imbolc Tasks/2.Provide snapshots.md
@@ -1,34 +1,34 @@
 # Provide snapshots
 <img src="/images/OKP4-GitHub-Phase2.jpg" width="auto" height="auto">
 
-## Sistemi Güncelleme ve Docker Kurulumu
+## Step 1: Sistemi Güncelleme ve Docker Kurulumu
 ```bash
 sudo apt update && \
 sudo apt install curl git docker.io -y
 ```
 
-## Cloning the Repo
+## Step 2: Cloning the Repo
 ```
 git clone https://github.com/koltigin/Cosmos-Snapshots.git && cd Cosmos-Snapshots
 ```
 
-## Creating Snapshots and OKP4 Folder
+## Step 3: Creating Snapshots and OKP4 Folder
 ```
 mkdir -p $HOME/snapshots/snapshots/testnet/okp4
 ```
 
-## Creating the Log File
+## Step 4: Creating the Log File
 OKP4 file is created here.
 ```
 touch $HOME/snapshots/snapshots/testnet/okp4/okp4_log.txt
 ```
-## Setup Nginx
+## Step 5: Setup Nginx
 ```bash
 sudo apt-get install nginx -y
 sudo unlink /etc/nginx/sites-enabled/default
 ```
 
-## Creating the file-server.conf
+## Step 6: Creating the file-server.conf
 Here we determine the directory of the site where we will publish the snapshot.
 ```bash
 sudo tee <<EOF >/dev/null /etc/nginx/sites-available/file-server.conf
@@ -46,7 +46,7 @@ chmod o+x /root/
 service nginx restart
 ```
 
-## Setting Variables
+## Step 7:  Setting Variables
 We are copying the `example_snapshot.sh` file as the `okp4_snapshot.sh` file.
 ```bash
 cp $HOME/Cosmos-Snapshots/scripts/example_snapshot.sh $HOME/Cosmos-Snapshots/scripts/okp4_snapshot.sh
@@ -65,7 +65,7 @@ DATA_PATH="$HOME/.okp4d/data/"
 SERVICE_NAME="okp4d.service"
 ```
 
-## Running Script to Take New Snapshot
+## Step 8: Running Script to Take New Snapshot
 First, we give the file run permission.
 ```bash
 chmod +x ./Cosmos-Snapshots/scripts/okp4_snapshot.sh
@@ -76,15 +76,17 @@ Finally, we run the script.
 ./Cosmos-Snapshots/scripts/okp4_snapshot.sh
 ```
 
-## Checking Snapshot
+## Step 9: Checking Snapshot
 When the snapshot process is completed, file the relevant file.
 You can see it in the `/snapshots/snapshots/testnet/okp4/` file.
 And check link below.
 ```bash
 echo http://$(curl -s -4 ifconfig.me)/snapshots/testnet/okp4/
 ```
+## Step 10: Submit Your snapshot Link
+https://okp4.typeform.com/NemetonSnapshot
 
-## Automating Snapshot Capture
+## Step 11: Automating Snapshot Capture
 First of all, we install cron and activate it.
 ```bash
 sudo apt install cron
