--- a/Phase 2: Imbolc Tasks/2.Provide snapshots.md
+++ b/Phase 2: Imbolc Tasks/2.Provide snapshots.md
@@ -1,7 +1,7 @@
 # Provide snapshots
 <img src="/images/OKP4-GitHub-Phase2.jpg" width="auto" height="auto">
 
-## Step 1: Sistemi Güncelleme ve Docker Kurulumu
+## Step 1: Updating the System and Installing Docker
 ```bash
 sudo apt update && \
 sudo apt install curl git docker.io -y
