--- a/Phase 2: Imbolc Tasks/2.Provide snapshots.md
+++ b/Phase 2: Imbolc Tasks/2.Provide snapshots.md
@@ -36,7 +36,7 @@ server {
     listen       80;
     client_max_body_size 5G;
     proxy_max_temp_file_size 0;
-    root /root/snapshot/;
+    root /root/snapshots/;
     autoindex on;
 }
 EOF
